feat: Implement page summarization using on-device AI, adding content retrieval, chunking logic, and necessary manifest permissions.

--- a/manifest.json
+++ b/manifest.json
@@ -5,5 +5,9 @@
   "description": "Checks availability of Chrome's on-device AI APIs.",
   "action": {
     "default_popup": "popup.html"
-  }
+  },
+  "permissions": [
+    "activeTab",
+    "scripting"
+  ]
 }
